--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "devDependencies": {
     "@tailwindcss/vite": "^4.2.0",
+    "@types/leaflet": "^1.9.21",
     "@types/node": "^25.3.0",
     "@types/react": "^19.2.14",
     "@types/react-dom": "^19.2.3",
@@ -29,10 +30,13 @@
     "clsx": "^2.1.1",
     "framer-motion": "^12.34.3",
     "gsap": "^3.14.2",
+    "leaflet": "^1.9.4",
     "lucide-react": "^0.575.0",
     "radix-ui": "^1.4.3",
     "react": "^19.2.4",
     "react-dom": "^19.2.4",
-    "tailwind-merge": "^3.5.0"
+    "react-router-dom": "^7.13.0",
+    "tailwind-merge": "^3.5.0",
+    "three": "^0.183.1"
   }
 }
